--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -9,7 +9,7 @@
  * argument is a `String` with the title of the page, the second
  * argument is an `Html` object containing the body of the page.
  *@
-@main("Welcome to Vicenta") {
+@main("Welcome to Vicenta", tab="index") {
 
     <div class="well">
         <h1>@message</h1>
