--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -1,23 +1,71 @@
-@*
- * This template is called from the `index` template. This template
- * handles the rendering of the page header and body tags. It takes
- * two arguments, a `String` for the title of the page and an `Html`
- * object to insert into the body of the page.
- *@
-@(title: String)(content: Html)
-
+@(title: String, tab: String = "", styles: Html = Html(""), scripts: Html = Html(""), modals: Html = Html(""))(content: Html)
 <!DOCTYPE html>
-<html lang="en">
-    <head>
-        @* Here's where we render the page title `String`. *@
-        <title>@title</title>
-        <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/main.css")">
-        <link rel="shortcut icon" type="image/png" href="@routes.Assets.versioned("images/favicon.png")">
-        <script src="@routes.Assets.versioned("javascripts/hello.js")" type="text/javascript"></script>
-    </head>
-    <body>
-        @* And here's where we render the `Html` object containing
-         * the page content. *@
-        @content
-    </body>
+
+<html>
+	<head>
+		<title>@title</title>
+		<link rel="stylesheet" media="screen" href="@routes.Assets.versioned("lib/bootstrap/css/bootstrap.min.css")" />
+		<link rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/docs.min.css")" />
+		<link rel="stylesheet" media="screen" href="@routes.Assets.versioned("lib/font-awesome/css/font-awesome.min.css")" />
+		<link rel="stylesheet" media="screen" href="@routes.Assets.versioned("lib/bootstrap-datepicker/css/bootstrap-datepicker3.css")" />
+		<link rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/main.css")"/ >
+		<link rel="icon" href="@routes.Assets.versioned("images/favicon.ico")">
+		@styles
+		<script src="@routes.Assets.versioned("lib/jquery/jquery.min.js")" type="text/javascript"></script>
+		<script src="@routes.Assets.versioned("lib/bootstrap/js/bootstrap.min.js")" type="text/javascript"></script>
+		<script src="@routes.Assets.versioned("lib/bootstrap-datepicker/js/bootstrap-datepicker.js")" type="text/javascript"></script>
+		<script src="@routes.Assets.versioned("javascripts/main.js")" type="text/javascript"></script>
+		@scripts
+	</head>
+	<body tab="@tab">
+		<div class="navbar navbar-default navbar-fixed-top">
+			<div class="container">
+				<!-- Brand and toggle get grouped for better mobile display -->
+				<div class="navbar-header">
+					<a class="navbar-brand @("active".when(tab == "index"))" href="@routes.HomeController.index">Vicenta</a>
+					<button class="navbar-toggle" type="button" data-toggle="collapse" data-target="#navbar-main">
+						<span class="sr-only">Toggle navigation</span>
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+					</button>
+				</div>
+				<div class="navbar-collapse collapse" id="navbar-main">
+					<ul class="nav navbar-nav">
+						<li class="dropdown @("active".when(Seq("vertical", "horizontal", "inline", "mixed").contains(tab)))">
+							<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Menu1 <span class="caret"></span></a>
+							<ul class="dropdown-menu" role="menu">
+								<li@if(tab == "vertical"){ class="active"}><a href="#">Vertical</a></li>
+					    			<li@if(tab == "horizontal"){ class="active"}><a href="#">Horizontal</a></li>
+								<li@if(tab == "inline"){ class="active"}><a href="#">Inline</a></li>
+								<li@if(tab == "mixed"){ class="active"}><a href="#">Mix styles</a></li>
+							</ul>
+						</li>
+						<li@if(tab == "multifield"){ class="active"}><a class="versioned" href="#">Menu2</a></li>
+						<li@if(tab == "extendit"){ class="active"}><a href="#">Menu3</a></li>
+						<li@if(tab == "docs"){ class="active"}>
+							<a href="https://docs.google.com/document/d/1KmUTYP8yNMXrWuffj8XLP-9aqh2h4FirNhGQVscax0c/edit?usp=sharing">Documentation</a>
+						</li>
+					</ul>
+					<ul class="nav navbar-nav navbar-right">
+						<li class="dropdown play-version"><a>0.0</a></li>
+						<li class="github"><a href="https://github.com/Zzivi/vicenta">Github</a></li>
+					</ul>
+				</div>
+			</div>
+		</div>
+
+		<div class="container">
+			@content
+		</div>
+
+		<div class="footer">
+			<div class="container">
+				<p>Designed and developed by <a href="https://github.com/zzivi" target="_blank">Zzivi</a></p>
+				<p>Code licensed under <a href="http://www.apache.org/licenses/LICENSE-2.0" target="_blank">Apache License v2.0</a></p>
+				<p>© 2016 Zzivi</p>
+			</div>
+		</div>
+		@modals
+	</body>
 </html>
